# IOTsec

./: .gitignore  Doxyfile.in  Makefile.am  README.md  compile.sh  configure.ac
doc/: documentation.docx  ~$cumentation.docx
doc/html/: annotated.html  classes.html  client_8h_source.html  config_8h_source.html  dir_000002_000001.html  dir_000004_000000.html  dir_000005_000000.html  dir_5a30104352ef4255dc24354b02eb2d20.html  dir_5d3b9833639d3670ac2cbe89d88de061.html  dir_5d3b9833639d3670ac2cbe89d88de061_dep.dot  dir_8cb06d1ffed0eedb3a4fae7c8a7c07d5.html  dir_8cb06d1ffed0eedb3a4fae7c8a7c07d5_dep.dot  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.dot  dir_a065c5f60305fee3569f887679366939.html  dir_a065c5f60305fee3569f887679366939_dep.dot  dir_b0a9085c143c754db11f0e035f3676f0.html  dir_b0a9085c143c754db11f0e035f3676f0_dep.dot  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  iotsec__client_8c.html  iotsec__client_8c__incl.dot  iotsec__client_8h.html  iotsec__client_8h__dep__incl.dot  iotsec__client_8h__incl.dot  iotsec__client_8h_source.html  iotsec__ipv_8h.html  iotsec__ipv_8h__dep__incl.dot  iotsec__ipv_8h__incl.dot  iotsec__ipv_8h_source.html  iotsec__log_8c.html  (+55 more)
lib/: Makefile.am
lib/include/: iotsec_client.h  iotsec_ipv.h  iotsec_log.h  iotsec_mem.h  iotsec_msg.h  iotsec_server.h
lib/src/: iotsec_client.c  iotsec_log.c  iotsec_mem.c  iotsec_msg.c  iotsec_server.c
(+45 files in other folders)
